implementing suggestions from code review