@@ -12,19 +12,28 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.util.Collections;
 import java.util.Map;
+import no.sikt.nva.nvi.index.model.report.AllInstitutionsReport;
+import no.sikt.nva.nvi.index.model.report.AllPeriodsReport;
+import no.sikt.nva.nvi.index.model.report.InstitutionReport;
+import no.sikt.nva.nvi.index.model.report.PeriodReport;
+import no.sikt.nva.nvi.index.model.report.ReportResponse;
 import no.unit.nva.stubs.FakeContext;
 import no.unit.nva.testutils.HandlerRequestBuilder;
 import nva.commons.core.Environment;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.zalando.problem.Problem;
 
 class FetchReportHandlerTest {
 
+  private static final String PERIOD = "period";
+  private static final String INSTITUTION = "institution";
   private static final Context CONTEXT = new FakeContext();
-  public static final String PERIOD = "period";
-  public static final String INSTITUTION = "institution";
+  private static final String REPORTS_PATH = "reports";
+  private static final String REPORTS_INSTITUTIONS_PATH =
+      "reports/%s/institutions".formatted(randomString());
+  public static final String PATH = "path";
   private FetchReportHandler handler;
   private ByteArrayOutputStream output;
 
@@ -36,48 +45,70 @@ class FetchReportHandlerTest {
 
   @Test
   void shouldReturnOkOnSuccess() throws IOException {
-    handler.handleRequest(createRequest(Map.of()), output, CONTEXT);
+    handler.handleRequest(createRequest(Collections.emptyMap(), REPORTS_PATH), output, CONTEXT);
 
-    var response = fromOutputStream(output, Problem.class);
+    var statusCode = fromOutputStream(output, ReportResponse.class).getStatusCode();
 
-    assertEquals(HttpURLConnection.HTTP_OK, response.getStatusCode());
+    assertEquals(HttpURLConnection.HTTP_OK, statusCode);
   }
 
   @Test
-  void shouldReturnPeriodReportWhenNoPathParametersAreProvided() throws IOException {
-    var request = createRequest(Map.of());
-    handler.handleRequest(request, output, CONTEXT);
+  void shouldReturnAllPeriodReportWhenNoPathParametersAreProvided() {
+    var request = createRequest(Map.of(), REPORTS_PATH);
 
-    var response = fromOutputStream(output, ReportResponse.class);
+    var response = handleRequest(request);
 
-    assertInstanceOf(PeriodReport.class, response.getBodyObject(ReportResponse.class));
+    assertInstanceOf(AllPeriodsReport.class, response);
   }
 
   @Test
-  void shouldReturnAllInstitutionsReportWhenPeriodIsProvidedInPathParameters() throws IOException {
-    var request = createRequest(Map.of(PERIOD, randomString()));
-    handler.handleRequest(request, output, CONTEXT);
+  void shouldReturnPeriodReportWhenPeriodIsProvidedInPathParameters() {
+    var request = createRequest(Map.of(PERIOD, randomString()), REPORTS_PATH);
 
-    var response = fromOutputStream(output, ReportResponse.class);
+    var response = handleRequest(request);
 
-    assertInstanceOf(AllInstitutionsReport.class, response.getBodyObject(ReportResponse.class));
+    assertInstanceOf(PeriodReport.class, response);
   }
 
   @Test
-  void shouldReturnInstitutionsReportWhenPeriodAndInstitutionAreProvidedInPathParameters()
-      throws IOException {
-    var request = createRequest(Map.of(PERIOD, randomString(), INSTITUTION, randomString()));
-    handler.handleRequest(request, output, CONTEXT);
+  void
+      shouldReturnAllInstitutionsReportWhenPeriodIsProvidedInPathParametersAndInstitutionIsPresentInPathParameters() {
+    var request = createRequest(Map.of(PERIOD, randomString()), REPORTS_INSTITUTIONS_PATH);
 
-    var response = fromOutputStream(output, ReportResponse.class);
+    var response = handleRequest(request);
 
-    assertInstanceOf(InstitutionReport.class, response.getBodyObject(ReportResponse.class));
+    assertInstanceOf(AllInstitutionsReport.class, response);
   }
 
-  private static InputStream createRequest(Map<String, String> pathParameters)
-      throws JsonProcessingException {
-    return new HandlerRequestBuilder<InputStream>(dtoObjectMapper)
-        .withPathParameters(pathParameters)
-        .build();
+  @Test
+  void shouldReturnInstitutionsReportWhenPeriodAndInstitutionAreProvidedInPathParameters() {
+    var request =
+        createRequest(
+            Map.of(PERIOD, randomString(), INSTITUTION, randomString()), REPORTS_INSTITUTIONS_PATH);
+
+    var response = handleRequest(request);
+
+    assertInstanceOf(InstitutionReport.class, response);
+  }
+
+  private static InputStream createRequest(Map<String, String> pathParameters, String path) {
+    try {
+      return new HandlerRequestBuilder<InputStream>(dtoObjectMapper)
+          .withOtherProperties(Map.of(PATH, path))
+          .withPathParameters(pathParameters)
+          .build();
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  private ReportResponse handleRequest(InputStream request) {
+    try {
+      handler.handleRequest(request, output, CONTEXT);
+      var response = fromOutputStream(output, ReportResponse.class);
+      return response.getBodyObject(ReportResponse.class);
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    }
   }
 }
